@@ -15,6 +15,13 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
++ <mave> added class BackPropagationAlgo, a sub-class of LearningAlgorithm for BackPropagation
++ <mave> implemented clone method to sub-classes of MatrixModifier and VectorModifier
+C <mave> renamed some methods of sub-classes of MatrixModifier
+C <mave> Variant methods getRealVec and getRealMat now returns non-const pointers
+C <mave> now Modifier class inheritance from Clonable
++ <mave> added methods setVectorModifier, setMatrixModifier to LearningAlgorithm
+
     ==> 201 - 10/05/2007 <==
 
 C <mave> Factory map "MatrixLinker" to "DotLinker" for backward compatibility
